# hal_atmosic

./: CMakeLists.txt  Kconfig
ATMx2xx-x1x/: CMakeLists.txt
ATMx2xx-x1x/drivers/: CMakeLists.txt
ATMx2xx-x1x/drivers/spi/: spi.h
ATMx2xx-x1x/drivers/timer/: timer.h
ATMx2xx-x1x/drivers/trng/: trng_internal.h
ATMx2xx-x1x/include/: arch.h  calibration.h  flash.h  led.h  ll.h  nvm.h  reg_access.h  rep_vec.h  rom.h  vectors.h
ATMx2xx-x1x/include/armgcc/: compiler.h
ATMx2xx-x1x/include/iccarm/: compiler.h
ATMx2xx-x1x/include/reg/: ARMCM0.h  at_ahb_dma_regs_core_macro.h  at_apb1_wrpr_regs_core_macro.h  at_apb_gadc_regs_core_macro.h  at_apb_i2c_regs_core_macro.h  at_apb_jtag_regs_core_macro.h  at_apb_ksm_regs_core_macro.h  at_apb_nvm_regs_core_macro.h  at_apb_oled_regs_core_macro.h  at_apb_pdm_regs_core_macro.h  at_apb_pseq_regs_core_macro.h  at_apb_pwm_regs_core_macro.h  at_apb_qdec_regs_core_macro.h  at_apb_qspi_regs_core_macro.h  at_apb_rcos_cal_regs_core_macro.h  at_apb_shub_regs_core_macro.h  at_apb_slwtimer_regs_core_macro.h  at_apb_spi_regs_core_macro.h  at_apb_swd_regs_core_macro.h  at_apb_to_dma_regs_core_macro.h  at_apb_trng_regs_core_macro.h  at_apb_wrpr_regs_core_macro.h  at_clkrstgen.h  at_lc_regs_core_macro.h  at_pinmux.h  at_wrpr.h  base_addr.h  intisr.h  mdm_macro.h  pmu_gadc_regs_core_macro.h  pmu_spi.h  pmu_swreg_regs_core_macro.h  pmu_top_regs_core_macro.h  pmu_wurx_regs_core_macro.h  radio_rx_regs_core_macro.h  radio_spi.h  radio_synth_regs_core_macro.h  radio_top_regs_core_macro.h  rif_regs_core_macro.h  system_ARMCM0.h
(+11 files in other folders)
